# shippy

./: CMakeLists.txt  package.xml
ROSArduinoBridge/: ROSArduinoBridge.ino  diff_controller.h  motor_driver.h  motor_driver.ino
config/: drive_shippy.rviz  drive_shippy_SLAM_Mapping.rviz  drive_shippy_with_Lidar.rviz  joint_names_Assem2.SLDASM.yaml  mapper_params_online_async.yaml  my_controllers.yaml  view_shippy.rviz
description/: Assem2.SLDASM.csv  Assem2.SLDASM.urdf  shippy.urdf  shippy.urdf.xacro  shippy_attachments.urdf.xacro  shippy_core.urdf.xacro  shippy_fans.urdf.xacro
description/gazebo/: gazebo_control.xacro  lidar.xacro  ros2_control.xacro  shippy.urdf.xacro  shippy_attachments.urdf.xacro  shippy_collision.xacro  shippy_core.urdf.xacro  shippy_fans.urdf.xacro  shippy_visual.xacro
launch/: deltaLidar.launch.py  launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
meshes/: Body.STL  Link_Attach.STL  Link_Lackaging.STL  Link_Left_Fan.STL  Link_Left_Metal.STL  Link_Metal.STL  Link_Right_Fan.STL  Link_Right_Metal.STL  Link_Robot_Front_Attachments.STL  Link_SIdes.STL  Link_Side_Left.STL  Link_Side_Right.STL  Link_Top_Metal.STL
worlds/: obstacles.world  sydney_regatta.sdf
