<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shippy</name>
  <version>0.0.0</version>
  <description>This is Autonomous water cleaning robot called shippy</description>
  <maintainer email="yousef.elshabrawii@gmail.com">Yousef Mohamed ElShabrawii</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
